# locallm

./: Justfile  README.md  main.py  pyproject.toml  requirements.txt  vllm_main.py
notebooks/: conversation.py  first-test.ipynb
