[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "locallm"
version = "0.0.1"
authors = [
    {name = "Alvaro Clemente", email = "aclemente@theknotww.com"},
]
description = "Deploying and running LLM locally"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.dev = {file = ["requirements_dev.txt"]}

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
ignore_missing_imports = true
